# loc-gsopt

./: .gitignore  README.md  notes.md  opt.py  pyproject.toml  randomgs.py  requirements.txt  run_scripts.sh
config/: config.yaml
data/: celestrak_tles.txt  most_diverse_100_ground_stations.json
examples_grace_testing/: brahe_example.ipynb  example_contact.py  nelder_mead_example.py  nelder_mead_scipy_ex.py
sh_files/: run_scripts2.sh  run_scripts_ccgs.sh  run_scripts_ccgs2.sh  run_scripts_ccgs3.sh  run_scripts_ccgs4.sh  run_scripts_ccgsICEYE1.sh  run_scripts_ccgsICEYE2.sh  run_scripts_ccgsICEYE3.sh  run_scripts_ccgsICEYE4.sh  run_scripts_ccgsICEYE5.sh  run_scripts_exclude.sh  run_scripts_exclude2.sh  run_scripts_powell.sh  run_scripts_powell2.sh
src/: main.py  sat_gen.py  station_gen.py  utils.py
src/common/: objective_functions.py  plotting.py  sat_gen.py  station_gen.py  utils.py
src/examples/: contact.ipynb  nelder_mead_ex.ipynb  nelder_mead_mykel.ipynb  optimize.ipynb  pyomo_contact_opt.ipynb  pyomo_data_opt.ipynb  pyomo_gap_opt.ipynb  randomgs.ipynb  randomgs_check.ipynb  simplex_generation.ipynb  vedant_example.ipynb
src/methods/free_select/: scipy_ccgs.py  (+3 more)
src/optimizations/: nelder_mead.py
wandb/: latest-run
wandb/run-20250303_153354-gqagoqzf/: run-gqagoqzf.wandb
wandb/run-20250303_153410-l0ljm3z1/: run-l0ljm3z1.wandb
wandb/run-20250303_154010-wgjhsk6y/: run-wgjhsk6y.wandb
wandb/run-20250303_154440-gxhm04kb/: run-gxhm04kb.wandb
wandb/run-20250303_155715-vp0hh8no/: run-vp0hh8no.wandb
wandb/run-20250303_162132-oh73x0ke/: run-oh73x0ke.wandb
(+55 files in other folders)
