[project]
name = "loc-gsopt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brahe @ git+https://github.com/duncaneddy/brahe.git@master",
    "cartopy>=0.24.1",
    "geopandas>=1.0.1",
    "geopy>=2.4.1",
    "global-land-mask>=1.0.0",
    "httpx>=0.28.1",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "shapely>=2.0.6",
]

[tool.uv.sources]
brahe = { git = "https://github.com/duncaneddy/brahe.git", rev = "master" }
